# Voxply

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md
client/voxply-desktop/: index.html  package-lock.json  package.json  vite.config.ts
client/voxply-desktop/public/demo-games/: dice.html
client/voxply-desktop/src/: App.tsx  constants.ts  main.tsx  styles.css  types.ts
client/voxply-desktop/src-tauri/: Cargo.toml  tauri.conf.json
client/voxply-desktop/src-tauri/capabilities/: default.json
client/voxply-desktop/src-tauri/src/: auth_creds.rs  home_hub.rs  lib.rs  main.rs  pairing.rs
client/voxply-desktop/src/components/: Attachments.tsx  Avatar.tsx  Icons.tsx  Lightbox.tsx  MessageContent.tsx  MessageReactions.tsx  MicLevelMeter.tsx  ReactionPicker.tsx  TypingIndicator.tsx  WelcomeRecoveryBlock.tsx
client/voxply-desktop/src/utils/: audio.ts  format.ts  recentEmoji.ts
client/voxply-tui/: Cargo.toml
client/voxply-tui/src/: hub_client.rs  ui.rs
crates/voxply-app/: Cargo.toml
crates/voxply-app/src/: app.rs  input.rs  main.rs  protocol.rs  ui.rs
crates/voxply-hub/: Cargo.toml
crates/voxply-hub/src/: lib.rs  main.rs  permissions.rs  server.rs  state.rs
crates/voxply-hub/src/auth/: handlers.rs  models.rs
crates/voxply-hub/src/db/: migrations.rs
crates/voxply-hub/src/federation/: client.rs  handlers.rs  models.rs
crates/voxply-hub/src/routes/: channels.rs  chat_models.rs  dm_models.rs  dms.rs  friends.rs  health.rs  invite_models.rs  invites.rs  me.rs  messages.rs  mod.rs  moderation.rs  moderation_models.rs  role_models.rs  roles.rs  ws.rs
crates/voxply-hub/tests/: alliance_flow.rs  auth_flow.rs  chat_flow.rs  federation_flow.rs  invite_flow.rs  moderation_flow.rs  roles_flow.rs
crates/voxply-identity/: Cargo.toml
crates/voxply-identity/src/: lib.rs  pow.rs
crates/voxply-net/: Cargo.toml
crates/voxply-net/src/: lib.rs
crates/voxply-render/: Cargo.toml
crates/voxply-render/src/: lib.rs
crates/voxply-script/: Cargo.toml
crates/voxply-script/src/: lib.rs
crates/voxply-voice/: Cargo.toml
crates/voxply-voice/examples/: udp_call.rs
crates/voxply-voice/src/: capture.rs  lib.rs  pipeline.rs  playback.rs  protocol.rs
crates/voxply-world/: Cargo.toml
crates/voxply-world/src/: lib.rs
docs/: README.md  THREAT_MODEL.md  alliances.md  architecture.md  client.md  data-model.md  decisions.md  farm-model.md  federation.md  future-features.md  gaming.md  glossary.md  home-hub.md  hosting.md  identity.md  multi-device.md  threat-model.md  voice.md
server/voxply-hub/: Cargo.toml
server/voxply-hub/src/: dm_worker.rs  lib.rs  main.rs  permissions.rs  rate_limit.rs  server.rs  state.rs
server/voxply-hub/src/auth/: handlers.rs  middleware.rs  models.rs
server/voxply-hub/src/db/: migrations.rs
server/voxply-hub/src/federation/: client.rs  handlers.rs  models.rs
server/voxply-hub/src/routes/: alliance_models.rs  alliances.rs  channels.rs  chat_models.rs  dm_models.rs  dms.rs  friends.rs  games.rs  health.rs  hub.rs  identity.rs  me.rs  messages.rs  mod.rs  moderation.rs  moderation_models.rs  pairing.rs  role_models.rs  roles.rs  users.rs  ws.rs
server/voxply-hub/tests/: alliance_flow.rs  auth_flow.rs  chat_flow.rs  dms_flow.rs  federation_flow.rs  friends_flow.rs  games_flow.rs  hub_admin_flow.rs  identity_flow.rs  migrations.rs  moderation_flow.rs  multi_device_auth.rs  pairing_flow.rs  rate_limit_flow.rs
server/voxply-seed/: Cargo.toml
server/voxply-seed/src/: main.rs
shared/voxply-identity/: Cargo.toml
shared/voxply-identity/src/: lib.rs  master.rs  recovery.rs  subkey.rs  wire.rs
shared/voxply-voice/: Cargo.toml
shared/voxply-voice/examples/: loopback.rs
shared/voxply-voice/src/: capture.rs  codec.rs  denoise.rs  devices.rs  lib.rs  pipeline.rs  playback.rs  protocol.rs  transport.rs
