[workspace]
resolver = "2"
members = [
    # Server
    "server/voxply-hub",
    "server/voxply-seed",

    # Client
    "client/voxply-tui",
    "client/voxply-desktop/src-tauri",

    # Shared
    "shared/voxply-identity",
    "shared/voxply-voice",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1", features = ["v4"] }
