[package]
name = "voxply-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voxply"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
hex = "0.4"
voxply-identity = { path = "../../shared/voxply-identity" }
voxply-voice = { path = "../../shared/voxply-voice" }
tracing = { workspace = true }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
