[package]
name = "voxply-identity"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# ed25519-dalek — cryptographic signing for decentralized identity
ed25519-dalek = { version = "2", features = ["rand_core"] }

# rand — random number generation (needed to create new keypairs)
rand = "0.8"

# hex — converts raw bytes to readable hex strings (like BitConverter.ToString in C#)
hex = "0.4"

# dirs — finds platform-specific directories (like Environment.GetFolderPath in C#)
dirs = "6"

# SHA256 for proof-of-work security levels
sha2 = "0.10"
