[package]
name = "voxply-render"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
anyhow = { workspace = true }

# wgpu — cross-platform GPU API (like Vulkan/Metal/DX12, but portable)
wgpu = "24"

# winit — cross-platform window creation and input handling
winit = "0.30"
