[package]
name = "voxply-script"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

# mlua — Lua scripting engine. "luau" enables Roblox's Luau dialect.
# "vendored" bundles Lua so we don't need a system install.
mlua = { version = "0.10", features = ["luau", "vendored"] }

# wasmtime — WASM runtime for sandboxed game modules
wasmtime = "29"
