[package]
name = "voxply-seed"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voxply-seed"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
hex = "0.4"
voxply-identity = { path = "../../shared/voxply-identity" }
