[package]
name = "voxply-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "voxply_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
hex = "0.4"
rand = "0.8"
voxply-identity = { path = "../../../shared/voxply-identity" }
voxply-voice = { path = "../../../shared/voxply-voice" }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
dirs = "6"
